--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="card flex justify-content-center">
-    <p-dropdown 
-        [options]="cities" 
-        [(ngModel)]="selectedCity" 
-        optionLabel="name"
-        placeholder="Select a City" />
-</div>
+<router-outlet />
