--- a/src/app/pages/readme-generator/readme-generator.component.html
+++ b/src/app/pages/readme-generator/readme-generator.component.html
@@ -1,6 +1,4 @@
 <div class="work-area">
     <Editor />
-    <div class="to-do">
-        <h1>--> Here preview <--</h1>
-    </div>
+    <Preview />
 </div>
