--- a/src/app/pages/readme-generator/readme-generator.component.css
+++ b/src/app/pages/readme-generator/readme-generator.component.css
@@ -6,3 +6,39 @@
     padding: 1rem;
     gap: 2rem;
 }
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+li {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0.5rem;
+    justify-content: center;
+    text-align: center;
+    background-color: #f9f9f9;
+    color: #333;
+}
+
+li:hover {
+    background-color: #e9e9e9;
+    cursor: pointer;
+}
+
+.bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.tools {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
